# replit-app

./: .env.example  .gitignore  .replit  CLAUDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOWNLOAD_INSTRUCTIONS.md  Download Test  FLEXIBLE_PARSER_README.md  Form Test  Integration Test Deck  Medical Flashcards  Medical Sample Deck  N8N_HTTP_REQUEST_SETUP.md  N8N_SETUP.md  PRODUCTION_READY.md  README.md  Test  Test Cloze Deck  Test Deck  Test_1751134811  Vignette Test  anking_engine.py  anking_engine_fixed.py  api_routes.py  app.py  basic_test.apkg  clear_test.apkg  cloze_format_example.md  cloze_test.apkg  complete_app_code.py  cors_config.py  debug_response.json  debug_test.apkg  different_test.apkg  direct_test.apkg  enhanced_anki_generator.py  enhanced_medical_generator.py  export_info.md  (+139 more)
attached_assets/: My Anki Deck_1750212156160.apkg  Pasted--ADD-ON-CONFIGURATIONS-Compatibility-with-Image-Style-Editor-add-on-c-1750437874267_1750437874268.txt  Pasted--Enhanced-templates-with-proper-structure-templates-name-Enhanced-1751148704196_1751148704197.txt  Pasted--NIGHT-MODE-COLORS-NM-Default-Text-Color-nightMode-card-night-mode-card-1750437978539_1750437978541.txt  Pasted--USER-CUSTOMIZATION-1750438040555_1750438040556.txt  Pasted--Updated-Replit-Code-Enhanced-FlashcardProcessor-class-python-import-os-import-json-import--1751472444704_1751472444706.txt  Pasted--You-are-SynapticRecall-a-super-intelligent-PERFECT-HIGH-YEILD-ALWAYS-CORRECT-QUESTION-AND-ANSWER-C-1751129792115_1751129792117.txt  (+51 more)
downloads/: Medical_Deck_20250712_194146_1752349306.apkg  (+8 more)
(+13 files in other folders)
