[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "genanki>=0.13.1",
    "gunicorn[gthread]>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "pillow>=11.2.1",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
]
